<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_user_info"
        android:orderInCategory="1"
        android:title="@string/user_info_title"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/logout"
        android:orderInCategory="2"
        android:title="@string/logout"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/login"
        android:orderInCategory="3"
        android:title="@string/login"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/new_event"
        android:orderInCategory="4"
        android:title="@string/new_event"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/face_auth"
        android:orderInCategory="5"
        android:title="@string/face_authentication"
        app:showAsAction="never"
        />

</menu>