<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/event_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconContentDescription="this is a festival icon"
        app:startIconDrawable="@drawable/baseline_festival_24">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/event_location"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_name"
        app:startIconContentDescription="this is a festival icon"
        app:startIconDrawable="@drawable/baseline_add_location_alt_24">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/event_date"
        android:focusableInTouchMode="false"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_location"
        app:startIconContentDescription="this is a festival icon"
        app:startIconDrawable="@drawable/baseline_date_range_24">


        <com.google.android.material.textfield.TextInputEditText
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/dropdown_menu_event_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/event_type"
        android:orientation="vertical"
        app:endIconDrawable="@drawable/baseline_keyboard_arrow_down_24"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_date"
        app:startIconContentDescription="this is a festival icon"
        app:startIconDrawable="@drawable/baseline_celebration_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_event_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/event_description"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dropdown_menu_event_type"
        app:startIconContentDescription="this is a festival icon">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:minLines="7" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/picture_button_container"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_event_description">

    <Button
        android:id="@+id/take_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/choose_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_picture"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        app:layout_constraintTop_toBottomOf="@id/picture_button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:textSize="12pt"
        app:strokeWidth="0.6dp"
        android:text="@string/cancel"
        />
    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:backgroundTint="#5B03EA"
        android:textColor="@color/white"
        android:text="@string/confirm"
        />
    </LinearLayout>
    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="10pt"
        android:backgroundTint="#430673"
        android:textColor="@color/white"
        android:text="@string/delete"
        />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/calendar_container_new_event"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:background="#CDC6C6"
        android:layout_height="wrap_content"
        android:layout_width="320dp">

        <android.widget.CalendarView
            android:id="@+id/calendar_view_new_event"
            android:layout_height="match_parent"
            android:layout_width="match_parent">
        </android.widget.CalendarView>
        <Button
            android:id="@+id/button_choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/choose_date"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/add_event_button"
        app:srcCompat="@drawable/baseline_add_24"/>





</androidx.constraintlayout.widget.ConstraintLayout>