<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:padding="@dimen/margin_medium">

    <FrameLayout
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <FrameLayout
        android:id="@+id/happy_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image_happy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/smiley"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/sad_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image_sad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sad"
        />
    </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/auth_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="20dp"
        android:text="@string/enable_face_authentication"/>
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/left_eye_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="20dp"
        android:text="@string/left_eye_closed_open"/>
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/right_eye_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="20dp"
        android:text="@string/right_eye_closed_open"/>
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/mouth_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:padding="20dp"
        android:text="@string/mouth_mad_smile"/>
    </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>